--- a/.env
+++ b/.env
@@ -9,15 +9,15 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # DB_CONNECTION=mysql
-DB_CONNECTION=sqlite
-# DB_DATABASE=perpustakaan
-DB_DATABASE=../database/database.sqlite
+DB_CONNECTION=mysql
+DB_DATABASE=perpustakaan
+# DB_DATABASE=../database/database.sqlite
 # DB_DATABASE=database/database.sqlite
 # DB_HOST=127.0.0.1
 DB_PORT=3306
 # DB_CONNECTION=sqlite
-# DB_USERNAME=admin
-# DB_PASSWORD=admin
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
